feat: add relay-cli and improve codegraph

--- a/codegraph/Makefile
+++ b/codegraph/Makefile
@@ -1,12 +1,21 @@
-run:
-	go build -o bin/codegraph && bin/codegraph
+build-relay:
+	@VERSION=$$(date +"%Y-%m-%dT%H:%M:%S"); \
+	go build -ldflags "-X main.version=$$VERSION" -o ~/go/bin/relay cmd/relay/main.go; \
+	echo "Built relay version: $$VERSION"
 
-build:
-	go build -o bin/codegraph
+run-relay: build-relay
+	bin/relay
 
-du:
-	docker compose up -d
+build-codegraph:
+	go build -o bin/codegraph cmd/codegraph/main.go
 
-dd:
-	docker compose down
+run-codegraph: build-codegraph
+	bin/codegraph
 
+test:
+	go test -v ./...
+
+
+tidy:
+	go mod tidy
+	go mod vendor
