--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,33 @@
+# ============================================
+# Operating System Files
+# ============================================
 # macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+.AppleDouble
+.LSOverride
 
-# Go build artifacts
-/bin/
-/build/
-/dist/
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.directory
+.Trash-*
+
+# ============================================
+# Go Build Artifacts & Binaries
+# ============================================
+# Binaries
 *.exe
 *.exe~
 *.dll
@@ -13,34 +36,166 @@
 *.test
 *.out
 
-# Go modules
-/go.sum
-/go.work.sum
-
-# Dependency directories
-/vendor/
-
-# IDE/editor files
-.idea/
-.vscode/
-*.swp
-
-# Logs
-*.log
-
-# Coverage reports
-coverage.out
-
-# Test cache
-*.tmp
-
-# Node.js (if using frontend)
-node_modules/
-
-# Ignore by folder (for monorepo structure)
+# Build directories (monorepo-aware)
 **/bin/
 **/build/
 **/dist/
+
+# Go workspace files (but keep go.mod and go.sum - they should be tracked)
+*.work
+
+# Test coverage
+coverage.out
+coverage.html
+*.coverprofile
+
+# ============================================
+# Go Dependencies
+# ============================================
+# Vendor directory (if using vendoring)
 **/vendor/
+
+# ============================================
+# Next.js / React / Node.js
+# ============================================
+# Dependencies
+node_modules/
+**/node_modules/
+.pnp
+.pnp.js
+
+# Next.js
+.next/
+out/
+**/.next/
+**/out/
+
+# Production builds
+build/
+dist/
+**/build/
+**/dist/
+
+# Environment variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Package manager lock files (optional - uncomment if you don't want to track them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+# bun.lockb
+
+# Vercel
+.vercel
+
+# Turbo
+.turbo
+
+# ============================================
+# Python
+# ============================================
+# Byte-compiled / optimized / DLL files
+__pycache__/
+**/__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+.Python
+*.egg-info/
+dist/
+build/
+eggs/
+wheels/
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv
+
+# ============================================
+# IDE / Editor Files
+# ============================================
+# VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# IntelliJ IDEA / WebStorm / GoLand
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+# Vim
+*.swp
+*.swo
+*~
+.vim/
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# ============================================
+# Logs & Temporary Files
+# ============================================
+*.log
+*.tmp
+*.temp
+*.cache
 **/*.log
-**/coverage.out
+**/*.tmp
+
+# ============================================
+# Docker
+# ============================================
+# Docker volumes and data
+.docker/
+
+# ============================================
+# Miscellaneous
+# ============================================
+# Backup files
+*.bak
+*.backup
+*.old
+
+# OS generated files
+Icon?
+.DS_Store
+
+# Personal notes (if you want to keep them private)
+# notepad.txt
+
+# ============================================
+# Testing
+# ============================================
+# Test results
+test-results/
+playwright-report/
+playwright/.cache/
