feat: setup project -- happy birthday to me!!

--- a/relay/Makefile
+++ b/relay/Makefile
@@ -1,10 +1,8 @@
-.PHONY: build run install-tools migrate-up migrate-down migrate-status migrate-create
+.PHONY: build run tidy install-tools install-goose install-sqlc sqlc-generate migrate-up migrate-down migrate-status migrate-create
 
-# Install tools globally (optional - tools work without this via 'go tool')
-install-tools:
-	@echo "Installing tools from go.mod..."
-	@go install tool
-	@echo "Tools installed successfully"
+# Tool versions
+GOOSE_VERSION := v3.24.3
+SQLC_VERSION := v1.30.0
 
 # Build the relay service
 build:
@@ -19,35 +17,86 @@ tidy:
 	go mod tidy
 	go mod vendor
 
-# Database migration commands (uses Go 1.24+ 'go tool' - no global install needed)
-# Usage: make migrate-up DB_DRIVER=postgres DB_STRING="postgres://user:pass@localhost/dbname"
-migrate-up:
-	@if [ -z "$(DB_DRIVER)" ] || [ -z "$(DB_STRING)" ]; then \
-		echo "Usage: make migrate-up DB_DRIVER=<driver> DB_STRING=<connection_string>"; \
-		echo "Example: make migrate-up DB_DRIVER=postgres DB_STRING='postgres://user:pass@localhost/dbname'"; \
+# ============================================================================
+# Tool Installation
+# ============================================================================
+
+# Install all CLI tools
+install-tools: install-goose install-sqlc
+	@echo "All tools installed successfully"
+
+# Install goose CLI with PostgreSQL-only support (excludes other DB drivers)
+install-goose:
+	@echo "Installing goose $(GOOSE_VERSION) with PostgreSQL-only support..."
+	@go install -tags='no_clickhouse no_libsql no_mssql no_mysql no_sqlite3 no_vertica no_ydb' \
+		github.com/pressly/goose/v3/cmd/goose@$(GOOSE_VERSION)
+	@echo "Goose installed to $$(go env GOPATH)/bin/goose"
+
+# Install sqlc for generating type-safe Go code from SQL
+install-sqlc:
+	@echo "Installing sqlc $(SQLC_VERSION)..."
+	@go install github.com/sqlc-dev/sqlc/cmd/sqlc@$(SQLC_VERSION)
+	@echo "sqlc installed to $$(go env GOPATH)/bin/sqlc"
+
+# ============================================================================
+# Code Generation
+# ============================================================================
+
+# Generate Go code from SQL queries using sqlc
+sqlc-generate:
+	@command -v sqlc >/dev/null 2>&1 || { \
+		echo "Error: sqlc not found. Run 'make install-sqlc' first."; \
+		exit 1; \
+	}
+	sqlc generate
+
+# Verify sqlc queries without generating (useful for CI)
+sqlc-verify:
+	@command -v sqlc >/dev/null 2>&1 || { \
+		echo "Error: sqlc not found. Run 'make install-sqlc' first."; \
+		exit 1; \
+	}
+	sqlc compile
+
+# ============================================================================
+# Database Migrations
+# ============================================================================
+
+# Check if goose is installed
+check-goose:
+	@command -v goose >/dev/null 2>&1 || { \
+		echo "Error: goose not found. Run 'make install-goose' first."; \
+		exit 1; \
+	}
+
+# Usage: make migrate-up DB_STRING="postgres://user:pass@localhost/dbname?sslmode=disable"
+migrate-up: check-goose
+	@if [ -z "$(DB_STRING)" ]; then \
+		echo "Usage: make migrate-up DB_STRING=<connection_string>"; \
+		echo "Example: make migrate-up DB_STRING='postgres://user:pass@localhost/dbname?sslmode=disable'"; \
 		exit 1; \
 	fi
-	go tool goose -dir migrations $(DB_DRIVER) $(DB_STRING) up
+	goose -dir migrations postgres "$(DB_STRING)" up
 
-migrate-down:
-	@if [ -z "$(DB_DRIVER)" ] || [ -z "$(DB_STRING)" ]; then \
-		echo "Usage: make migrate-down DB_DRIVER=<driver> DB_STRING=<connection_string>"; \
+migrate-down: check-goose
+	@if [ -z "$(DB_STRING)" ]; then \
+		echo "Usage: make migrate-down DB_STRING=<connection_string>"; \
 		exit 1; \
 	fi
-	go tool goose -dir migrations $(DB_DRIVER) $(DB_STRING) down
+	goose -dir migrations postgres "$(DB_STRING)" down
 
-migrate-status:
-	@if [ -z "$(DB_DRIVER)" ] || [ -z "$(DB_STRING)" ]; then \
-		echo "Usage: make migrate-status DB_DRIVER=<driver> DB_STRING=<connection_string>"; \
+migrate-status: check-goose
+	@if [ -z "$(DB_STRING)" ]; then \
+		echo "Usage: make migrate-status DB_STRING=<connection_string>"; \
 		exit 1; \
 	fi
-	go tool goose -dir migrations $(DB_DRIVER) $(DB_STRING) status
+	goose -dir migrations postgres "$(DB_STRING)" status
 
-migrate-create:
+migrate-create: check-goose
 	@if [ -z "$(NAME)" ]; then \
 		echo "Usage: make migrate-create NAME=<migration_name>"; \
 		echo "Example: make migrate-create NAME=create_users_table"; \
 		exit 1; \
 	fi
 	@mkdir -p migrations
-	go tool goose -dir migrations create $(NAME) sql
+	goose -dir migrations create $(NAME) sql
