feat: implement new server architecture for Relay
- Replaced the relay service with a new server implementation in the api-server.
- Added a new main entry point for the server with configuration loading, database connection, and HTTP server setup.
- Introduced context document management and job execution capabilities for processing events.
- Removed outdated task files and pre-commit hook script.
- Updated linting guide to reflect changes in the project structure.

--- a/api-server/Makefile
+++ b/api-server/Makefile
@@ -2,17 +2,15 @@
 
 ENUMVALIDATOR_BIN := $(abspath bin/enumvalidator)
 
-# Build the relay service
 build:
-	go build -o bin/relay cmd/relay/main.go
+	go build -o bin/server cmd/server/main.go
 
 $(ENUMVALIDATOR_BIN):
 	@mkdir -p $(dir $(ENUMVALIDATOR_BIN))
 	go build -o $(ENUMVALIDATOR_BIN) ./tools/linters/enumvalidator/cmd
 
-# Run the relay service
 run: build
-	bin/relay
+	bin/server
 
 # Tidy up go.mod and go.sum
 tidy:
