feat: add openai-go sdk

--- a/relay/.env.example
+++ b/relay/.env.example
@@ -30,3 +30,10 @@ PIPELINE_REDIS_STREAM=relay_events
 PIPELINE_REDIS_GROUP=relay_group
 PIPELINE_REDIS_CONSUMER=relay_worker_1
 PIPELINE_REDIS_DLQ_STREAM=relay_events_dlq
+
+# LLM Configuration
+LLM_ENABLED=true
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4
+OPENAI_MAX_TOKENS=2000
+OPENAI_TEMPERATURE=0.7
