--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,7 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fontsource/cal-sans": "^5.2.3",
     "@fontsource/libertinus-serif": "^5.2.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
@@ -49,7 +48,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "16.0.4",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
