refactor: update authentication setup and VSCode configurations
- remove better-auth references in package.json and documentation
- Updated the README to reflect changes in onboarding documentation.
- Added a new VSCode launch configuration for debugging various services.
- Adjusted .gitignore to ignore all VSCode settings except shared configurations.
- Removed outdated Google Authentication setup documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -131,12 +131,12 @@ ENV/
 # ============================================
 # IDE / Editor Files
 # ============================================
-# VSCode
-.vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
+# VSCode - ignore contents but allow shared configs
+.vscode/*
 !.vscode/launch.json
+!.vscode/tasks.json
 !.vscode/extensions.json
+
 *.code-workspace
 
 # IntelliJ IDEA / WebStorm / GoLand
