chore(env): update .env.example for improved configuration management
- Consolidated environment variables for clarity and organization.
- Renamed REDIS_CONSUMER to REDIS_CONSUMER_NAME for consistency.
- Added new variables for database connection pooling and OpenTelemetry configuration.
- Streamlined sections for Redis, WorkOS, and webhook settings.

--- a/relay/.env.example
+++ b/relay/.env.example
@@ -1,39 +1,33 @@
-# Database
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/relay?sslmode=disable
-
-# Redis
-REDIS_URL=redis://localhost:6379/0
-REDIS_STREAM=relay_events
-REDIS_CONSUMER_GROUP=relay_group
-REDIS_CONSUMER=relay_worker_1
-REDIS_DLQ_STREAM=relay_events_dlq
+# Environment
+RELAY_ENV=development
 
 # Server
 PORT=8080
-ENV=development
-WEBHOOK_BASE_URL=http://localhost:8080
-
-# WorkOS (optional for local development)
-WORKOS_API_KEY=dummy
-WORKOS_CLIENT_ID=dummy
-
-# Dashboard
 DASHBOARD_URL=http://localhost:3000
 
+# Database
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/relay?sslmode=disable
+DB_MAX_CONNS=10
+DB_MIN_CONNS=2
+
+# Redis & Pipeline
+REDIS_URL=redis://localhost:6379/0
+REDIS_STREAM=relay_events
+REDIS_CONSUMER_GROUP=relay_group
+REDIS_CONSUMER_NAME=relay_worker_1
+REDIS_DLQ_STREAM=relay_events_dlq
+TRACE_HEADER_NAME=X-Trace-Id
+
+# WorkOS Authentication
+WORKOS_API_KEY=dummy
+WORKOS_CLIENT_ID=dummy
+WORKOS_REDIRECT_URI=http://localhost:8080/auth/callback
+
+# Webhook
+WEBHOOK_BASE_URL=http://localhost:8080
+
 # OpenTelemetry (optional)
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_EXPORTER_OTLP_HEADERS=
 OTEL_SERVICE_NAME=relay
-OTEL_ENDPOINT=
-
-# Pipeline
-PIPELINE_REDIS_URL=redis://localhost:6379/0
-PIPELINE_REDIS_STREAM=relay_events
-PIPELINE_REDIS_GROUP=relay_group
-PIPELINE_REDIS_CONSUMER=relay_worker_1
-PIPELINE_REDIS_DLQ_STREAM=relay_events_dlq
-
-# LLM Configuration
-LLM_ENABLED=true
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4
-OPENAI_MAX_TOKENS=2000
-OPENAI_TEMPERATURE=0.7
+OTEL_SERVICE_VERSION=dev
