chore: update .gitignore to exclude Delve debugger binaries and modify VSCode launch configurations for improved debugging experience

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ $RECYCLE.BIN/
 *.test
 *.out
 
+# Delve debugger binaries
+__debug_bin*
+
 # Build directories (monorepo-aware)
 **/bin/
 **/build/
