--- a/relay/dev/docker-compose.yaml
+++ b/relay/dev/docker-compose.yaml
@@ -14,6 +14,28 @@ services:
       timeout: 5s
       retries: 5
 
+  typesense:
+    image: typesense/typesense:29.0
+    restart: on-failure
+    ports:
+      - "8108:8108"
+    volumes:
+      - ./typesense-data:/data
+    command: '--data-dir /data --api-key=xyz --enable-cors'
+
+  arangodb:
+    image: arangodb/arangodb:latest
+    restart: always
+    ports:
+      - "8529:8529"
+    environment:
+      # Set the root password (replace 'your-secret-password' with a strong password)
+      ARANGO_ROOT_PASSWORD: your-secret-password
+    volumes:
+      # Persistent data volumes
+      - arangodb_data:/var/lib/arangodb3
+      - arangodb_apps_data:/var/lib/arangodb3-apps
+
   redis:
     image: redis:7-alpine
     ports:
@@ -26,3 +48,5 @@ services:
 
 volumes:
   postgres_data:
+  arangodb_data:
+  arangodb_apps_data:
