chore(.gitignore): add rules to ignore brain agent debug logs

--- a/.gitignore
+++ b/.gitignore
@@ -176,6 +176,10 @@ out/
 **/*.log
 **/*.tmp
 
+# Brain agent debug logs
+debug_logs/
+**/debug_logs/
+
 # ============================================
 # Docker
 # ============================================
