feat(relay): add LLM configuration options for OpenAI and GLM in .env.example

--- a/relay/.env.example
+++ b/relay/.env.example
@@ -26,6 +26,20 @@ WORKOS_REDIRECT_URI=http://localhost:8080/auth/callback
 # Webhook
 WEBHOOK_BASE_URL=http://localhost:8080
 
+# LLM Configuration
+# For OpenAI:
+# OPENAI_API_KEY=sk-...
+# OPENAI_MODEL=gpt-4o-mini
+# OPENAI_BASE_URL= (leave empty for default)
+#
+# For GLM (Zhipu AI):
+# OPENAI_API_KEY=your-zhipu-api-key
+# OPENAI_BASE_URL=https://open.bigmodel.cn/api/paas/v4/
+# OPENAI_MODEL=glm-4-plus (GLM 4.7)
+OPENAI_API_KEY=
+OPENAI_BASE_URL=
+OPENAI_MODEL=gpt-4o-mini
+
 # OpenTelemetry (optional)
 OTEL_EXPORTER_OTLP_ENDPOINT=
 OTEL_EXPORTER_OTLP_HEADERS=
