feat(env): add LLM configuration for Planner and Explore agents
- Introduced environment variables for Planner Agent LLM configuration, including provider, API key, base URL, model, and reasoning effort.
- Added environment variables for Explore Agent LLM configuration, including provider, API key, base URL, and model.

These additions enhance the flexibility and configurability of the LLM agents in the application.

--- a/relay/.env.example
+++ b/relay/.env.example
@@ -40,6 +40,19 @@ OPENAI_API_KEY=
 OPENAI_BASE_URL=
 OPENAI_MODEL=gpt-4o-mini
 
+# Planner Agent LLM Configuration
+PLANNER_LLM_PROVIDER=openai
+PLANNER_LLM_API_KEY=
+PLANNER_LLM_BASE_URL=
+PLANNER_LLM_MODEL=gpt-5.2
+PLANNER_LLM_REASONING_EFFORT=medium
+
+# Explore Agent LLM Configuration
+EXPLORE_LLM_PROVIDER=openai
+EXPLORE_LLM_API_KEY=
+EXPLORE_BASE_URL=
+EXPLORE_LLM_MODEL=grok-4-1-fast-reasoning
+
 # OpenTelemetry (optional)
 OTEL_EXPORTER_OTLP_ENDPOINT=
 OTEL_EXPORTER_OTLP_HEADERS=
