feat(brain): simplify spec generator and add spec generation capability
- Simplify submit_spec tool to single spec field (removes confidence params)
- Remove Strict mode from submit_spec tool for better markdown formatting
- Add spec generation flow in action executor
- Add txrunner for transactional store operations
- Update explore tools to allow cat, head, grep, rg commands
- Remove outdated blocked command tests

--- a/relay/.env.example
+++ b/relay/.env.example
@@ -53,6 +53,8 @@ EXPLORE_LLM_API_KEY=
 EXPLORE_BASE_URL=
 EXPLORE_LLM_MODEL=grok-4-1-fast-reasoning
 
+# Spec Generator uses same config as Planner (PLANNER_LLM_*)
+
 # OpenTelemetry (optional)
 OTEL_EXPORTER_OTLP_ENDPOINT=
 OTEL_EXPORTER_OTLP_HEADERS=
