--- a/relay/.env.worker.example
+++ b/relay/.env.worker.example
@@ -9,20 +9,23 @@ DB_MIN_CONNS=2
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
-REDIS_STREAM=relay_events
-REDIS_CONSUMER_GROUP=relay_group
+REDIS_STREAM=agent-stream:org-123:workspace-456
+REDIS_CONSUMER_GROUP=agent-group
 REDIS_CONSUMER_NAME=relay_worker_1
 REDIS_DLQ_STREAM=relay_events_dlq
 TRACE_HEADER_NAME=X-Trace-Id
 
-# ArangoDB
+# ArangoDB (optional - codegraph disabled if unset)
 ARANGO_URL=http://localhost:8529
 ARANGO_USERNAME=root
 ARANGO_PASSWORD=
 ARANGO_DATABASE=codegraph
 
+# Workspace
+WORKSPACE_ID=
+DATA_DIR=/data
+
 # Repo
-REPO_ROOT=
 MODULE_PATH=
 
 # Planner LLM (also used for spec generation)
