chore(env): update examples

--- a/relay/.env.worker.example
+++ b/relay/.env.worker.example
@@ -7,12 +7,13 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/relay?sslmode=disable
 DB_MAX_CONNS=10
 DB_MIN_CONNS=2
 
-# Redis
+# Redis (worker must target the per-workspace stream)
 REDIS_URL=redis://localhost:6379/0
+# Format: agent-stream:org-{org_id}:workspace-{workspace_id}
 REDIS_STREAM=agent-stream:org-123:workspace-456
 REDIS_CONSUMER_GROUP=agent-group
-REDIS_CONSUMER_NAME=relay_worker_1
-REDIS_DLQ_STREAM=relay_events_dlq
+REDIS_CONSUMER_NAME=relay-worker-1
+REDIS_DLQ_STREAM=relay-events-dlq
 TRACE_HEADER_NAME=X-Trace-Id
 
 # ArangoDB (optional - codegraph disabled if unset)
@@ -21,11 +22,11 @@ ARANGO_USERNAME=root
 ARANGO_PASSWORD=
 ARANGO_DATABASE=codegraph
 
-# Workspace
+# Workspace (required)
 WORKSPACE_ID=
 DATA_DIR=/data
 
-# Repo
+# Repo (Optional - Only to be specified if codegraph is enabled)
 MODULE_PATH=
 
 # Planner LLM (also used for spec generation)
