--- a/relay/.env.server.example
+++ b/relay/.env.server.example
@@ -14,9 +14,10 @@ DB_MIN_CONNS=2
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
-REDIS_STREAM=relay_events
-REDIS_CONSUMER_GROUP=relay_group
-REDIS_DLQ_STREAM=relay_events_dlq
+# Stream value is required by config, but server routes per workspace.
+REDIS_STREAM=agent-stream:org-123:workspace-456
+REDIS_CONSUMER_GROUP=agent-group
+REDIS_DLQ_STREAM=relay-events-dlq
 TRACE_HEADER_NAME=X-Trace-Id
 
 # WorkOS
